--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,8 +12,8 @@ references:
     run:
       name: Set AWS credentials
       command: |
-        aws configure set aws_access_key_id ${AKIAZJ7QWSJL33EQKZEH}
-        aws configure set aws_secret_access_key ${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}
+        aws configure set aws_access_key_id ${AWS_ACCESS_KEY_ID}
+        aws configure set aws_secret_access_key ${AWS_SECRET_ACCESS_KEY}
   deploy_to_s3: &deploy_to_s3
     run:
       name: Upload to s3 
