--- a/_config.yml
+++ b/_config.yml
@@ -18,22 +18,50 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: My Portfolio Site and Blog
+title: Jared Walker
 email: info@jaredmwalker.com
 description: >- # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+url: "https://jaredmwalker.com/" # the base hostname & protocol for your site, e.g. http://example.com
+twitter_username: walker_jar
+github_username:  jarjarwalker
+
+#Logo
+avatar: "/assets/img/avatar-icon.png"
+
+# By default, the image is cut into a circle. You can disable this behaviour by setting 'round-avatar: false'
+round-avatar: true
+
+# Select the social network links that you want to show in the footer.
+# Uncomment the links you want to show and add your information to each one.
+social-network-links:
+  email: "jamjarwalker@gmail.com"
+  github: jarjarwalker
+  twitter: walker_jar
+  linkedin: jared-walker-8241b9184
+  instagram: jayredwalker
 
 # Build settings
 remote_theme: daattali/beautiful-jekyll@5.0.0
 plugins:
   - jekyll-feed
   - jekyll-remote-theme
+
+# Personalize the colours in your website. Colour values can be any valid CSS colour
+
+navbar-col: "#E59345"
+navbar-text-col: "#404040"
+navbar-border-col: "#DDDDDD"
+page-col: "#FFFFFF"
+text-col: "#404040"
+link-col: "#008AFF"
+hover-col: "#0085A1"
+footer-col: "#E59345"
+footer-text-col: "#777777"
+footer-link-col: "#404040"
 
 # Exclude from processing.
 # The following items will not be processed, by default.
