wrote my first blog post! and my second lol

--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ twitter_username: walker_jar
 github_username:  jarjarwalker
 
 #Logo
-avatar: "/assets/img/avatar-icon.png"
+avatar: "/img/avatar.jpg"
 
 # By default, the image is cut into a circle. You can disable this behaviour by setting 'round-avatar: false'
 round-avatar: true
